--- a/_posts/2019-11-13-gp-ucb.markdown
+++ b/_posts/2019-11-13-gp-ucb.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: Implementing GP-UCB in Jax
 date: 2019-11-13
-==========================
+---
 
 Here I'll showcase the capabilities of the Jax framework to
 solve some interesting problems. We will be implementing the
@@ -16,10 +16,12 @@ choose a point $$x_t$$ and observe a noisy realization of the
 function value $$y_t \sim f(x_t) + \mathcal{N}(0, \sigma^2)$$.
 
 We want to minimize the cumulative regret
-<p style="text-align: center;"> 
+<p style="text-align: center;">
+
 $$
-\sum_{t=0}^{T}f(x_t)
-$$.
+\sum_{t=0}^{T}f(x_t).
+$$
+
 </p>
 
 The objective means that we are interested in both finding
